--- a/projectHtlp/Base.lproj/Main.storyboard
+++ b/projectHtlp/Base.lproj/Main.storyboard
@@ -394,7 +394,7 @@
                                     </textField>
                                 </subviews>
                             </stackView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LYd-o4-3At">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LYd-o4-3At">
                                 <rect key="frame" x="-4" y="436" width="328" height="44"/>
                                 <items>
                                     <barButtonItem systemItem="reply" id="p6m-jb-bm4">
@@ -620,7 +620,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9eu-iS-CcT">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9eu-iS-CcT">
                                 <rect key="frame" x="0.0" y="20" width="414" height="628"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Catégorie" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z3O-RX-hZo">
@@ -744,7 +744,7 @@
                                     <constraint firstItem="G26-89-0IP" firstAttribute="leading" secondItem="9eu-iS-CcT" secondAttribute="leading" id="xpw-rc-s48"/>
                                 </constraints>
                             </scrollView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="irl-CE-QIa">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="irl-CE-QIa">
                                 <rect key="frame" x="0.0" y="648" width="414" height="44"/>
                                 <items>
                                     <barButtonItem systemItem="reply" id="ugK-Jn-1vp">
@@ -1648,7 +1648,7 @@
                                     <action selector="viewUser:" destination="AYv-xD-tlx" eventType="touchUpInside" id="Ocb-0C-LCj"/>
                                 </connections>
                             </button>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zeh-ct-Dji">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zeh-ct-Dji">
                                 <rect key="frame" x="-4" y="392" width="328" height="44"/>
                                 <items>
                                     <barButtonItem systemItem="reply" id="fC2-sE-Qap">
@@ -2121,12 +2121,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fun-cr-jq3">
-                                <rect key="frame" x="-4" y="28" width="328" height="41"/>
-                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="31"/>
-                                <color key="textColor" red="0.38712160796559614" green="0.38916593822289747" blue="0.67730368589743595" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Note" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cv8-z9-xeP">
                                 <rect key="frame" x="16" y="84" width="288" height="25"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="19"/>
@@ -2226,6 +2220,12 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="pn1-6V-9KX"/>
                                 </items>
                             </toolbar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Laisser un avis" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fun-cr-jq3">
+                                <rect key="frame" x="-4" y="28" width="328" height="41"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="31"/>
+                                <color key="textColor" red="0.38712160796559614" green="0.38916593822289747" blue="0.67730368589743595" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.78722711258088252" green="1" blue="0.59574096988994618" alpha="0.5587284482758621" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -2264,6 +2264,7 @@
                         <outlet property="star3" destination="adz-xD-T09" id="M1i-n8-OyU"/>
                         <outlet property="star4" destination="NEp-ao-Cdm" id="rof-Ru-OAb"/>
                         <outlet property="star5" destination="O7X-l9-W7U" id="eNM-Ib-ger"/>
+                        <outlet property="validationButton" destination="obb-Rh-W1o" id="zzK-j1-Udn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gH1-G4-3tZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2282,7 +2283,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qep-oL-Ozb">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qep-oL-Ozb">
                                 <rect key="frame" x="-4" y="436" width="328" height="44"/>
                                 <items>
                                     <barButtonItem systemItem="reply" id="SNu-DL-y6i">
@@ -2299,7 +2300,7 @@
                                 <color key="textColor" red="0.47743015100000002" green="0.77276259820000004" blue="0.41063978169999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VjP-lY-qDY">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VjP-lY-qDY">
                                 <rect key="frame" x="-4" y="49" width="328" height="387"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -2913,11 +2914,11 @@
         <image name="user" width="48" height="48"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="KFs-S8-H22"/>
-        <segue reference="4Hi-v6-6Oy"/>
-        <segue reference="HUV-72-kJb"/>
         <segue reference="qsO-TL-m9W"/>
         <segue reference="XuA-Xa-eAh"/>
+        <segue reference="Qx5-P7-cNM"/>
+        <segue reference="4Hi-v6-6Oy"/>
+        <segue reference="HUV-72-kJb"/>
         <segue reference="s3j-eu-9Nr"/>
     </inferredMetricsTieBreakers>
 </document>
